# pyITupgrade

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  batida_direta.it  main.py  ode_da_alegria_wav.it  pyproject.toml  pytest.ini  requirements.txt  soundbank.asm  soundbank.bnk  test.py
.github/workflows/: python-publish.yml  tests.yml
docs/: BUILDING_FROM_SOURCE.md  DOCS.md  SCHISM_HOME.md  SNES_EMU.md  TESTING.md
music/: Makefile  linkfile  music.sfc  music.sym
music/res/: soundbank.asm  soundbank.h
pyIT/: ITenvelope_node.py  ITfile.py  ITinstrument.py  ITnote.py  ITpan_envelope.py  ITpitch_envelope.py  ITsample.py  ITvol_envelope.py  pyitcompress.py
s/: schismtracker
src/instrument/: MathSynthesizer.py
src/pyIT/: __init__.py
src/pyIT/convert/: IT2ogg.py  __init__.py
src/pyIT/instrument/: MathSynthesizer.py  __init__.py  getAsset.py
src/pyIT/pyIT/: ITenvelope.py  ITenvelope_node.py  ITfile.py  ITinstrument.py  ITnote.py  ITpan_envelope.py  ITpattern.py  ITpitch_envelope.py  ITsample.py  ITvol_envelope.py  PatternBuilder.py  TablatureBuilder.py  WavInstrumentBuilder.py  __init__.py  pyitcompress.py
test/: __init__.py  main.py  test-requirements.txt
test/create_sample_it/: __init__.py  create_sample_it.py  create_sample_tablature_it.py
test/test_assets/: __init__.py  __main__.py  test_assets.py
test/test_ogg/: __init__.py  __main__.py  test_ogg.py
test/test_pattern/: __init__.py  __main__.py  test_pattern.py  tests.py
test/test_simple_it/: __main__.py
test/test_smconv/: __init__.py  __main__.py  test_smconv.py
test/test_smconv/snes_proj/: Makefile  data.asm  music.c  music.it
test/test_smconv_tablature/: __init__.py  test_smconv_tablature.py
test/test_smconv_tablature/snes_proj/: music.it
test/test_tablature/: __init__.py  __main__.py  test_tablature.py  tests.py
