[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyITupgrade"
authors = [
    {name = "BrunoRNS", email = "brunorns05@outlook.com"},
    {name = "mike burke", email = "mrburke@gmail.com"}
]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "scipy-stubs>=1.15.3.0",
    "pydub>=0.25.1",
    "audioop-lts; python_version>='3.13'"
]

[project.optional-dependencies]
test = [
    "pytest>=9.1.1",
    "mutagen>=1.48.1"
]

[project.urls]
Home = "https://github.com/BrunoRNS/pyITupgrade"

[tool.flit]
module = "pyIT"