[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyITupgrade"
version = "1.0.1"
description = "Python library for Impulse Tracker (IT) module files"
authors = [
    {name = "BrunoRNS", email = "brunorns05@outlook.com"},
    {name = "mike burke", email = "mrburke@gmail.com"}
]
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "scipy-stubs>=1.15.3.0",
    "pydub>=0.25.1",
    "audioop-lts; python_version>='3.13'"
]

[project.optional-dependencies]
test = [
    "pytest>=9.1.1",
    "mutagen>=1.48.1"
]

[project.urls]
Home = "https://github.com/BrunoRNS/pyITupgrade"

[tool.setuptools.packages.find]
where = ["src"]
